apps/weatherstation/javelin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherstation
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: weather.wesl.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherstation-web
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: weatherstation-api
                port:
                  name: http
